# piensalo

./: .gitignore  ALPHA-EXIT-CRITERIA.md  ALPHA-FEEDBACK-SCHEMA.json  ALPHA-PLAN.md  ALPHA-START-HERE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVIDENCE.md  LAUNCH.md  LICENSE  MANIFESTO.md  Makefile  NEGATIVE-RESULTS.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT-MODEL.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
assets/: README.md
docs/: THIRD_PARTY_NOTICES.md  THREAT-MODEL.md  architecture.md  evidence-levels.md  evidence-report.md  good-first-issues.md  methodology.md  model-provenance.md  operator-boundaries.md  origin-story.md  skill-security.md  technical-report.md
evals/: Makefile
micro-skills/: README.md
public-export/: ALPHA-INVITE.md  ALPHA-READINESS-NEXT-PROMPT.md  ALPHA-RESULT-TRACKER.md  ALPHA-TESTER-INSTRUCTIONS.md  CREATOR-BRAND-AUDIT.md  EXPORT-MANIFEST.json  FABLE-REFERENCE-AUDIT.md  FRESH-CLONE-ACCEPTANCE.md  HASHES.sha256  OPERATOR-LAUNCH-DECISION.md  RALFYISHERE-PROFILE-DRAFT.md
skills/: README.md
social/: demo-script.md  linkedin.md  show-hn.md  x-thread.md
tests/: conftest.py  test_cli_smoke.py  test_context_cli.py  test_context_compiler.py  test_context_example_parity.py  test_context_independence.py  test_context_schema_parser.py  test_context_verify_diff.py  test_contract.py  test_evidence_and_compiler.py  test_flagship_transcript.py  test_gateway_cli.py  test_gateway_contracts.py  test_gateway_server.py  test_integrity_adversarial.py  test_launch_demo_parity.py  test_layered.py  test_loop.py  test_main_module.py  (+16 more)
(+615 files in other folders)
