[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piensalo"
version = "0.1.0a2"
description = "A cognitive operating layer for AI models: bounded loops, observable-defect inspection, targeted repair, and layered verification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rafael Peña" }]
keywords = ["ai", "agents", "verification", "cognitive-architecture", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The core is stdlib-only by design. Provider extras are OPTIONAL and are
# never imported by core modules.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
piensalo = "piensalo.cli.main:main"

[project.urls]
Homepage = "https://github.com/ralfyishere/piensalo"

[tool.hatch.build.targets.wheel]
packages = ["src/piensalo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = ["pytest>=8"]
